# Crop-Disease-detection-and-map

./: .gitignore  PROGRESS.md  README.md  pnpm-lock.yaml
ml-backend/hf_deploy_stage/: Dockerfile  README.md  pyproject.toml
ml-backend/hf_deploy_stage/exports/: cpl_preprocessing_config.json
ml-backend/hf_deploy_stage/exports/saved_model/: fingerprint.pb  saved_model.pb
ml-backend/hf_deploy_stage/exports/saved_model/variables/: variables.index
ml-backend/hf_deploy_stage/models/hierarchical/models/: best_model.pt  crop_router_refinement.joblib
ml-backend/hf_deploy_stage/models/hierarchical/models/per_crop_heads/: bhindi_disease_head.joblib  brinjal_disease_head.joblib  (+18 more)
ml-backend/hf_deploy_stage/models/leaf_seg/: best.onnx  best.pt
ml-backend/hf_deploy_stage/monitoring/: requests.jsonl
ml-backend/hf_deploy_stage/rag/: README.md  audit_report.json  chunk_manifest.json  index_metadata.json  label_aliases.json
ml-backend/hf_deploy_stage/rag/chroma_db/: chroma.sqlite3
ml-backend/hf_deploy_stage/src/cpl_crop/: __init__.py  config.py  labels.py  model_loader.py
ml-backend/hf_deploy_stage/src/cpl_crop/api/: __init__.py  app.py  logging_setup.py  routes.py
ml-backend/hf_deploy_stage/src/cpl_crop/explain/: saliency.py
ml-backend/hf_deploy_stage/src/cpl_crop/hierarchical/: __init__.py
ml-backend/hf_deploy_stage/src/cpl_crop/monitoring/: drift.py  features.py  logger.py
ml-backend/hf_deploy_stage/src/cpl_crop/rag/: __init__.py  documents.py  indexing.py  service.py
ml-backend/hf_deploy_stage/src/cpl_crop/validation/: crop_verifier.py  extract.py  quality.py  router.py  segmenter.py
ml-backend/hf_deploy_stage/src/cpl_crop_disease.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+213 files in other folders)
