[project]
name = "cpl-crop-disease"
version = "0.1.0"
description = "MLOps service for the CPL crop-disease classifier (EfficientNetB2, 139 classes)"
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "CPL Hackathon" }]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# ----------------------------------------------------------------------------
# pytest
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
markers = [
    "slow: tests that load the full SavedModel (multi-second startup)",
]

# ----------------------------------------------------------------------------
# ruff (lint + format)
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "C4", "RUF"]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"] # allow camelCase test fixtures if any

# ----------------------------------------------------------------------------
# mypy
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true
files = ["src"]
